--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -33,3 +33,4 @@
 @use '../components/content/HelpText/HelpText';
 @use '../components/content/Icon/Icon';
 @use '../components/content/Img/Img';
+@use '../components/content/video/Video';
