feat: desktop menubar

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,6 +22,7 @@
 @use '../components/canvas/Card/Card';
 @use '../components/canvas/Card/CardContent';
 @use '../components/canvas/Card/CardImg';
+@use '../components/canvas/MenuBar/MenuBar.scss';
 @use '../components/canvas/Section/Section';
 
 @use '../components/control/Button/Button';
