--- a/src/components/composition/Enter/Enter.scss
+++ b/src/components/composition/Enter/Enter.scss
@@ -45,19 +45,16 @@
 }
 
 evg-enter {
-  --enter-transition-duration: 0.5s;
-  --enter-transition-timing: ease-in-out;
-  --enter-transition-timing-boing: cubic-bezier(0.175, 0.885, 0.32, 1.275);
-
-  animation-duration: var(--enter-transition-duration);
+  animation-duration: var(--evg-transition-duration);
   animation-fill-mode: forwards;
   animation-iteration-count: 1;
-  animation-timing-function: var(--enter-transition-timing);
+  animation-timing-function: var(--evg-transition-timing);
   display: block;
   opacity: 0;
   z-index: 1;
 
   &[type='boing'] {
+    animation-duration: var(--evg-transition-duration-boing);
     animation-timing-function: var(--evg-transition-timing-boing);
   }
 
