feat: create evg-sticky web component

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,6 +17,7 @@
 @use '../components/composition/Meta/Meta';
 @use '../components/composition/Wrap/Wrap';
 @use '../components/composition/FormGroup/FormGroup';
+@use '../components/composition/Sticky/Sticky';
 
 @use '../components/canvas/Alert/Alert';
 @use '../components/canvas/Box/Box';
