feat: add evg-list web component

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -39,3 +39,4 @@
 @use '../components/content/Img/Img';
 @use '../components/content/Stat/Stat';
 @use '../components/content/Video/Video';
+@use '../components/content/List/List';
