feat: add dialog component styling

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,6 +17,7 @@
 @use '../components/composition/Wrap/Wrap';
 @use '../components/composition/Enter/Enter';
 @use '../components/composition/Sticky/Sticky';
+@use '../components/composition/Dialog/Dialog';
 
 @use '../components/canvas/Alert/Alert';
 @use '../components/canvas/Box/Box';
