feat: add dialog component styling

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,7 @@
 @use '../components/composition/Grid/GridItem';
 @use '../components/composition/Meta/Meta';
 @use '../components/composition/Wrap/Wrap';
+@use '../components/composition/Dialog/Dialog';
 
 @use '../components/canvas/Alert/Alert';
 @use '../components/canvas/Box/Box';
