--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,6 +26,7 @@
 @use '../components/canvas/MenuBar/MenuBar.scss';
 @use '../components/canvas/Section/Section';
 
+@use '../components/control/Breadcrumb/Breadcrumb';
 @use '../components/control/Button/Button';
 @use '../components/control/Input/Input';
 @use '../components/control/Link/Link';
