feat: add evg-sr-only utility class

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 @use 'utilities/spacing';
 @use 'utilities/text';
 @use 'utilities/theme';
+@use 'utilities/screen-reader';
 
 @use '../components/composition/App/App';
 @use '../components/composition/Grid/Grid';
