--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,6 +18,7 @@
 @use '../components/composition/Wrap/Wrap';
 @use '../components/composition/Enter/Enter';
 @use '../components/composition/Sticky/Sticky';
+@use '../components/composition/FormGroup/FormGroup';
 
 @use '../components/canvas/Alert/Alert';
 @use '../components/canvas/Box/Box';
