--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -48,6 +48,7 @@
 @use '../components/content/Video/Video';
 @use '../components/content/List/List';
 @use '../components/content/Thumbnail/Thumbnail';
+@use '../components/content/Label/Label';
 
 :root {
   --evg-transition-duration-enter: 0.4s;
