--- a/src/components/control/Breadcrumb/Breadcrumb.scss
+++ b/src/components/control/Breadcrumb/Breadcrumb.scss
@@ -11,6 +11,8 @@ evg-breadcrumb {
   }
 
   li {
+    display: none;
+
     &:not(:last-child)::after {
       background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M9.293 18.707a1 1 0 0 1 0-1.414L14.586 12 9.293 6.707a1 1 0 0 1 1.414-1.414l6 6a1 1 0 0 1 0 1.414l-6 6a1 1 0 0 1-1.414 0z' fill='%2385978c'/%3E%3C/svg%3E");
       background-size: cover;
@@ -22,9 +24,43 @@ evg-breadcrumb {
       width: 1em;
     }
 
+    &:first-child,
+    &:last-child {
+      display: block;
+    }
+
     &:last-child {
       opacity: 0.75;
       pointer-events: none;
+    }
+
+    // If there's a second to last child
+    // that's not the first child, display it
+    // but hide the link within
+    &:nth-last-child(2):not(:first-child) {
+      display: block;
+
+      &::before {
+        content: '...';
+      }
+
+      a {
+        display: none;
+      }
+    }
+
+    @media (width >= 768px) {
+      display: block;
+
+      &:nth-last-child(2):not(:first-child) {
+        &::before {
+          content: '';
+        }
+
+        a {
+          display: inline;
+        }
+      }
     }
   }
 
