--- a/src/components/composition/FormGroup/FormGroup.scss
+++ b/src/components/composition/FormGroup/FormGroup.scss
@@ -3,10 +3,10 @@ evg-form-group {
   display: grid;
   gap: var(--evg-spacing-sm);
 
-  label:not(evg-radio-checkbox label) {
+  evg-label {
     /* Negate the extra label height to account for the form group gap */
     margin-block: calc(
-      (var(--evg-label-height) / var(--evg-font-line-height) / 4) * -1
+      (var(--evg-spacing-thumb) / var(--evg-font-line-height) / 4) * -1
     );
   }
 
