--- a/src/components/content/Label/Label.scss
+++ b/src/components/content/Label/Label.scss
@@ -2,6 +2,7 @@ evg-label {
   align-items: center;
   color: var(--evg-theme-color);
   display: flex;
+  font-size: var(--evg-font-size-body-sm);
   font-weight: var(--evg-font-weight-bold);
   min-height: var(--evg-spacing-thumb);
 
