--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,7 +25,7 @@
 @use '../components/canvas/Card/CardContent';
 @use '../components/canvas/Card/CardImg';
 @use '../components/canvas/Drawer/Drawer';
-@use '../components/canvas/Header/Header.scss';
+@use '../components/canvas/Header/Header';
 @use '../components/canvas/Section/Section';
 
 @use '../components/control/Breadcrumb/Breadcrumb';
