--- a/src/components/canvas/Header/Header.scss
+++ b/src/components/canvas/Header/Header.scss
@@ -6,6 +6,8 @@ evg-header {
   gap: var(--evg-spacing-lg);
   justify-content: space-between;
   padding: var(--evg-spacing-md);
+  position: relative;
+  z-index: 20;
 
   @media (width >= 1024px) {
     padding: var(--evg-spacing-lg);
@@ -37,6 +39,27 @@ evg-header-secondary-nav {
   display: none;
 }
 
+evg-header-mega-menu {
+  display: none;
+  left: 0;
+  opacity: 0;
+  pointer-events: none;
+  position: absolute;
+  transform: translateY(-1rem);
+  transition:
+    opacity var(--evg-transition-enter),
+    display var(--evg-transition-enter) allow-discrete,
+    transform var(--evg-transition-enter);
+  width: 100%;
+  z-index: 10;
+
+  &[open] {
+    > * {
+      pointer-events: auto;
+    }
+  }
+}
+
 @media (width >= 1280px) {
   evg-header-primary-nav,
   evg-header-secondary-nav {
@@ -45,5 +68,16 @@ evg-header-secondary-nav {
 
   evg-header-mobile-nav {
     display: none;
+  }
+
+  evg-header-mega-menu[open]:not([open='false']) {
+    display: block;
+    opacity: 1;
+    transform: none;
+
+    @starting-style {
+      opacity: 0;
+      transform: translateY(-1rem);
+    }
   }
 }
