feat: cleaner thumbnails

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -44,6 +44,7 @@
 @use '../components/content/Stat/Stat';
 @use '../components/content/Video/Video';
 @use '../components/content/List/List';
+@use '../components/content/Thumbnail/Thumbnail';
 
 :root {
   --evg-transition-duration-enter: 0.4s;
