--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,6 +27,7 @@
 @use '../components/canvas/Drawer/Drawer';
 @use '../components/canvas/Header/Header';
 @use '../components/canvas/Section/Section';
+@use '../components/canvas/Supergraphic/Supergraphic';
 
 @use '../components/control/Breadcrumb/Breadcrumb';
 @use '../components/control/Button/Button';
