docs: stat group recipes

--- a/src/components/content/Stat/Stat.scss
+++ b/src/components/content/Stat/Stat.scss
@@ -59,6 +59,7 @@ evg-stat-icon {
   align-items: center;
   background: var(--evg-color-lime);
   border-radius: 50%;
+  color: var(--evg-color-forest);
   display: flex;
   font-size: var(--evg-font-size-64);
   height: 4rem;
