--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -56,4 +56,6 @@
 
   --evg-transition-enter: var(--evg-transition-duration-enter)
     var(--evg-transition-timing);
+
+  --evg-button-border-color-hover-secondary: var(--evg-color-coal);
 }
