feat!: remove negative button variant

--- a/src/components/control/Button/Button.scss
+++ b/src/components/control/Button/Button.scss
@@ -175,7 +175,7 @@ evg-button {
     }
   }
 
-  @each $variant in primary, secondary, negative, text {
+  @each $variant in primary, secondary, text {
     &[variant='#{$variant}'] {
       --_background: var(--evg-button-background-#{$variant});
       --_background-hover: var(--evg-button-background-hover-#{$variant});
