feat!: rename update evg-wrap to evg-wrapper

--- a/src/components/composition/Wrapper/Wrapper.scss
+++ b/src/components/composition/Wrapper/Wrapper.scss
@@ -2,7 +2,7 @@
 @use '../../../styles/variables/size';
 @use '../../../styles/variables/spacing';
 
-evg-wrap {
+evg-wrapper {
   display: block;
   margin-inline: auto;
   max-width: 90em; /* 1440px */
