docs: page setup

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -39,6 +39,7 @@
 @use '../components/control/MenuItem/MenuItem';
 @use '../components/control/MenuItem/MenuItemContent';
 @use '../components/control/RadioCheckbox/RadioCheckbox';
+@use '../components/control/SkipLink/SkipLink';
 
 @use '../components/content/Badge/Badge';
 @use '../components/content/Divider/Divider';
