refactor: tweak badge variant names

--- a/src/components/content/Badge/Badge.scss
+++ b/src/components/content/Badge/Badge.scss
@@ -41,7 +41,7 @@ evg-badge {
     --_background: var(--evg-color-lime);
   }
 
-  &[variant='lime light'] {
+  &[variant='lime-light'] {
     --_background: var(--evg-color-lime-50);
   }
 
