refactor: make buttons inline block and remove sky and lime themes from cards

--- a/src/components/control/Button/Button.scss
+++ b/src/components/control/Button/Button.scss
@@ -154,6 +154,7 @@ evg-button {
   @media (width < 600px) {
     &[width='full-width-mobile'] {
       display: block;
+      width: 100%;
 
       evg-loading-button,
       button,
