docs: add figma/github links and related components

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -54,10 +54,6 @@
 @use '../components/content/Label/Label';
 
 :root {
-  --evg-transition-duration-enter: 0.4s;
-
-  --evg-transition-enter: var(--evg-transition-duration-enter)
-    var(--evg-transition-timing);
-
-  --evg-button-border-color-hover-secondary: var(--evg-color-coal);
+  --evg-chip-border-color-light: transparent;
+  --evg-chip-border-color-dark: transparent;
 }
