feat: add border radius to evg-help-text

--- a/src/components/content/HelpText/HelpText.scss
+++ b/src/components/content/HelpText/HelpText.scss
@@ -2,6 +2,7 @@ evg-help-text {
   --_background-color: var(--evg-state-neutral-light);
 
   background-color: var(--_background-color);
+  border-radius: var(--evg-radius-sm);
   color: var(--evg-color-forest);
   display: block;
   font-size: var(--evg-font-size-body-sm);
