--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -53,7 +53,7 @@ h6 {
 }
 
 p {
-  line-height: var(--evg-font-line-height-lg);
+  line-height: var(--evg-font-line-height);
   margin-bottom: var(--evg-spacing-md);
   margin-top: 0;
 
